Update JDK and optimize